# data_privacy_distopia

./: .gitignore  CHANGELOG_VISUAL_IMPROVEMENTS.md  CLAUDE.md  GAMEPLAY_FIXES_CHANGELOG.md  GAME_DESIGN_DATA_BREACH_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_IMPROVEMENTS.md  LICENSE  Makefile  README.md  UIUX_REVIEW.md  UI_LAYOUT_REFERENCE.md  UI_plan.md  UX_FIXES_CHANGELOG.md  UX_IMPROVEMENTS_CHANGELOG.md  VISUAL_ASSETS_GUIDE.md  docker-compose.yml  refactoring_plan.md
backend/: .gitignore  Dockerfile  SYSTEM_MODE_IMPLEMENTATION_PROGRESS.md  alembic.ini  check_tables.py  create_db_direct.py  pyproject.toml  seed_system_data.py
backend/alembic/: env.py
backend/alembic/versions/: 4d3afdb01e1f_add_abuse_and_consequence_system_models.py  4f5d681548db_add_performance_indexes_and_.py  d0085f6ca55d_add_inference_rules_table_for_data_.py
backend/app/: config.py  main.py
backend/data/: consequences.json  prompts.json
backend/scripts/: seed_abuse_actions.py  seed_database.py  seed_directives.py
backend/tests/: conftest.py  test_citizen_outcomes.py  test_config_loading.py  test_content_validation.py  test_dashboard_state.py  test_directives.py  test_ending_calculator.py  test_flag_submission.py  test_flag_submission_integration.py  test_inferences.py  test_main.py  test_new_domains.py  test_npcs_api.py  test_operator_tracker.py  test_risk_score_caching.py  test_risk_score_performance.py  test_risk_scorer_service.py  test_risk_scoring.py  test_system_api.py  test_system_flow.py  test_system_mode_api.py  test_system_mode_services.py  test_time_progression.py
(+168 files in other folders)
